redesigned service section to meet figma design, fixed alignment of experience section, moved all typescript types to different files

--- a/src/components/Services/index.module.scss
+++ b/src/components/Services/index.module.scss
@@ -48,17 +48,33 @@
   }
 }
 
+/*********************
+************* ICON CONTAINER
+***********************/
+.container {
+  @extend %display;
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  background-color: $grey;
+  color: #fff;
+  font-size: 30px;
+}
+
 @media screen and (min-width: 768px) {
   .items_and_icons_section {
     padding: 80px 0;
 
     .items_hold {
-      align-items: flex-start;
+      display: grid;
+      grid-template-columns: 45% 45%;
+      grid-template-rows: auto auto;
     }
     .item_details {
-      margin: 30px;
+      margin-left: auto;
+      margin-right: auto;
       //   width: 30%;
-      width: 350px;
+      width: 300px;
 
       h4 {
         font-size: 25px;
@@ -66,9 +82,18 @@
       }
 
       span {
-        color: #fff;
+        // color: #fff;
         letter-spacing: 0.05em;
       }
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .items_and_icons_section {
+    .item_details {
+      //   width: 30%;
+      width: 350px;
     }
   }
 }
